# evoNN_UTTT

./: Benchmark.cpp  Benchmark.h  Board.cpp  Board.h  CMakeLists.txt  DiffEvolution.cpp  DiffEvolution.h  Genome.cpp  Genome.h  NN.cpp  NN.h  README.md  Tournament.cpp  Tournament.h  main.cpp
